fix bag card_vagon

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -435,7 +435,6 @@
                                         <div class="form-row">
                                             <div class="col-md-4 mb-1 text-left">
                                                 <label for="card_vag_kol_os" class="col-form-label">@IDSRWTResource.title_kol_os:</label>
-                                                @*<input type="number" class="form-control" id="card_vag_kol_os" name="card_vag_kol_os" data-mode="all" data-edit="" data-form="transceiver">*@
                                                 <select class="form-control" id="card_vag_kol_os" name="card_vag_kol_os" data-mode="all" data-edit="" data-form="transceiver"></select>
 
                                                 <div class="invalid-feedback">
@@ -475,7 +474,7 @@
                                             </div>
                                             <div class="col-md-3 mb-1 text-left">
                                                 <label for="card_vag_date_rem_uz" class="col-form-label">@IDSRWTResource.title_date_rem_uz:</label>
-                                                <input type="datetime" class="form-control" id="card_vag_date_rem_uz" name="card_vag_date_rem_uz" placeholder="" data-mode="all" data-edit="" data-form="transceiver">
+                                                <input type="datetime" class="form-control" id="card_vag_date_rem_uz" name="card_vag_date_rem_uz" placeholder="" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
@@ -483,7 +482,7 @@
                                         <div class="form-row">
                                             <div class="col-md-4 mb-1 text-left">
                                                 <label for="card_vag_name_owner" class="col-form-label">@IDSRWTResource.title_name_owner:</label>
-                                                <input type="text" class="form-control" id="card_vag_name_owner" name="card_vag_name_owner" data-mode="all" data-edit="" data-form="transceiver">
+                                                <input type="text" class="form-control" id="card_vag_name_owner" name="card_vag_name_owner" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
@@ -503,7 +502,7 @@
                                         <div class="form-row">
                                             <div class="col-md-5 mb-1 text-left">
                                                 <label for="card_vag_name_operator" class="col-form-label">@IDSRWTResource.title_name_operator:</label>
-                                                <input type="text" class="form-control" id="card_vag_name_operator" name="card_vag_name_operator" data-mode="all" data-edit="" data-form="transceiver">
+                                                <input type="text" class="form-control" id="card_vag_name_operator" name="card_vag_name_operator" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
