add dir certification_data & commercial_condition

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -673,7 +673,8 @@
                                         <div class="form-row">
                                             <div class="col-md-12 mb-1 text-left">
                                                 <label for="uz_cargo_cargo_analysis" class="col-form-label">@IDSRWTResource.title_cargo_analysis</label>
-                                                <textarea class="form-control" id="uz_cargo_cargo_analysis" name="uz_cargo_cargo_analysis" placeholder="TEXT/zayava" data-mode="edit-global" data-edit="" data-form="transceiver"></textarea>
+                                                <textarea class="form-control" id="uz_cargo_cargo_analysis" name="uz_cargo_cargo_analysis" data-mode="edit-global" data-edit="" data-form="transceiver"></textarea>
+                                                @*placeholder="TEXT/zayava"*@
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
@@ -681,7 +682,7 @@
                                         <div class="form-row">
                                             <div class="col-md-2 mb-1 text-left">
                                                 <label for="uz_cargo_kol_pac" class="col-form-label">@IDSRWTResource.title_kol_pac:</label>
-                                                <input type="number" class="form-control" id="uz_cargo_kol_pac" name="uz_cargo_kol_pac" placeholder="VAGON/kol_pac" data-mode="all" data-edit="" data-form="transceiver">
+                                                <input type="number" class="form-control" id="uz_cargo_kol_pac" name="uz_cargo_kol_pac" placeholder="VAGON/COLLECT_V/kol_pac" data-mode="all" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
@@ -719,8 +720,7 @@
                                             </div>
                                             <div class="col-md-8 mb-1 text-left">
                                                 <label for="uz_cargo_danger_name" class="col-form-label">@IDSRWTResource.title_danger_name:</label>
-                                                <input type="text" class="form-control" id="uz_cargo_danger_name" name="uz_cargo_danger_name" placeholder="VAGON/COLLECT_V/danger" data-mode="view" data-edit="" data-form="transceiver">
-                                                <select class="form-control" id="uz_cargo_danger_name" name="uz_cargo_danger_name" placeholder="VAGON/COLLECT_V/danger" data-mode="edit" data-edit="" data-form="transceiver"></select>
+                                                <select class="form-control" id="uz_cargo_danger_name" name="uz_cargo_danger_name" placeholder="VAGON/COLLECT_V/danger" data-mode="all" data-edit="" data-form="transceiver"></select>
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
