add danger + select inp mode

--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -320,3 +320,23 @@ fieldset > fieldset {
 .close-vagon {
     display:block;
 }
+
+.inp-epd {
+    border-color:blue;
+    border-width: 2px;
+}
+
+.inp-manual {
+    border-color:red;
+    border-width: 2px;
+}
+
+.inp-uz {
+    border-color:orange;
+    border-width: 2px;
+}
+
+.inp-auto {
+    border-color:darkviolet;
+    border-width: 2px;
+}
