--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -728,9 +728,27 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <fieldset class="border-secondary">
-                                            <legend class="text-secondary">@IDSRWTResource.title_container</legend>
-                                        </fieldset>
+
+
+                                        <div id="accordion" role="tablist" aria-multiselectable="true" class="mt-1">
+                                            <div class="card border-primary">
+                                                <div class="card-header text-left" role="tab" id="headingTwo">
+                                                    <div class="mb-0">
+                                                        <a data-toggle="collapse" title="Контейнера на вагоне, если в ЭПД на выбранный вагон есть контейнера, тогда будет указано количество контейнеров" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseOne" class="collapsed">
+                                                            <i class="fa fa-file-text-o fa-lg" aria-hidden="true"></i>
+                                                            @*<h3></h3>*@
+                                                            <p>@IDSRWTResource.title_container<span class="badge badge-primary text-white ml-2" id="count-cont">'</span></p>
+                                                        </a>
+                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                                    </div>
+                                                </div>
+                                                <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
+                                                    <div class="card-block">
+                                                        <table class="table table-striped table-bordered" id="table-cont" style="width:100%; font-size:0.8rem;"></table>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </fieldset>
                                     <fieldset class="border-primary">
                                         <legend class="text-primary">@IDSRWTResource.title_sap_inbound_delivery</legend>
